// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dom-control-flow-if-fals-inline-computed expects hidden 1`] = `
<div>
  <!--if element-->
</div>
`;

exports[`dom-control-flow-if-true-inline-computed expects shown 1`] = `
<div>
  <div>
    Hello World
            
  </div>
</div>
`;

exports[`dom-control-hook-flow-else-if-true expects 0 1`] = `
<div>
  <div>
    Hello World 0
            
  </div>
  <!--if element-->
</div>
`;

exports[`dom-control-hook-flow-else-if-true expects 1 1`] = `
<div>
  <!--if element-->
  <div>
    Hello World 1
            
  </div>
</div>
`;

exports[`dom-control-hook-flow-if-false expects hidden 1`] = `
<div>
  <!--if element-->
</div>
`;

exports[`dom-control-hook-flow-if-false-stay expects hidden 1`] = `
<div>
  <!--if element-->
</div>
`;

exports[`dom-control-hook-flow-if-false-stay initial hidden 1`] = `
<div>
  <!--if element-->
</div>
`;

exports[`dom-control-hook-flow-if-true expects shown 1`] = `
<div>
  <div>
    Hello World
            
  </div>
</div>
`;
